Latest submodule update in 6.8 branch (first after 6.8.0-beta1), the one with chromium 118 --> 122 update, fails in meta-qt6 CI with following error:
agent:2024/06/24 07:32:32 build.go:404: | FAILED: obj/third_party/distributed_point_functions/internal/evaluate_prg_hwy.o agent:2024/06/24 07:32:32 build.go:404: | aarch64-poky-linux-g++ -mcpu=cortex-a57+crc -mbranch-protection=standard -fstack-protector-strong -O2 -D_FORTIFY_SOURCE=2 --sysroot=/home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtwebengine/6.8.0/recipe-sysroot -MMD -MF obj/third_party/distributed_point_functions/internal/evaluate_prg_hwy.o.d -DUSE_UDEV -DUSE_AURA=1 -DUSE_OZONE=1 -DOFFICIAL_BUILD -DTOOLKIT_QT -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -DNO_UNWIND_TABLES -D_LIBCPP_HARDENING_MODE=_LIBCPP_HARDENING_MODE_NONE -DCR_SYSROOT_KEY=20230611T210420Z-2 -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -DGOOGLE_PROTOBUF_NO_RTTI -DGOOGLE_PROTOBUF_NO_STATIC_INITIALIZER -DGOOGLE_PROTOBUF_INTERNAL_DONATE_STEAL_INLINE=0 -DHAVE_PTHREAD -Igen -I../../../../../git/src/3rdparty/chromium -I../../../../../git/src/3rdparty/chromium/third_party/distributed_point_functions/code -Igen/third_party/distributed_point_functions -I../../../../../git/src/3rdparty/chromium/third_party/protobuf/src -Igen/protoc_out -I../../../../../git/src/3rdparty/chromium/third_party/abseil-cpp -I../../../../../git/src/3rdparty/chromium/third_party/highway/src -I../../../../../git/src/3rdparty/chromium/third_party/boringssl/src/include -fno-ident -fno-strict-aliasing -fstack-protector -Wno-unknown-pragmas -Wno-address -Wno-parentheses -Wno-sign-compare -Wno-stringop-overflow -Wno-stringop-overread -Wno-psabi -Wno-multichar -Wno-format-zero-length -fno-unwind-tables -fno-asynchronous-unwind-tables -fPIC -pipe -pthread -mbranch-protection=standard -O2 -fdata-sections -ffunction-sections -fno-math-errno -fno-omit-frame-pointer -g0 -fvisibility=hidden -Wno-unused-local-typedefs -Wno-maybe-uninitialized -Wno-deprecated-declarations -fno-delete-null-pointer-checks -Wno-comments -Wno-packed-not-aligned -Wno-dangling-else -Wno-missing-field-initializers -Wno-unused-parameter -Wno-psabi -Wno-deprecated-copy -Wno-expansion-to-defined -std=gnu++20 -fno-exceptions -fno-rtti --sysroot=../../../../../recipe-sysroot -fvisibility-inlines-hidden -Wno-narrowing -Wno-class-memaccess -Wno-attributes -Wno-class-memaccess -Wno-subobject-linkage -Wno-invalid-offsetof -Wno-return-type -Wno-deprecated-copy -O2 -pipe -feliminate-unused-debug-types -fcanon-prefix-map -fmacro-prefix-map=/home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtwebengine/6.8.0/git=/usr/src/debug/qtwebengine/6.8.0 -fdebug-prefix-map=/home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtwebengine/6.8.0/git=/usr/src/debug/qtwebengine/6.8.0 -fmacro-prefix-map=/home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtwebengine/6.8.0/build=/usr/src/debug/qtwebengine/6.8.0 -fdebug-prefix-map=/home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtwebengine/6.8.0/build=/usr/src/debug/qtwebengine/6.8.0 -fdebug-prefix-map=/home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtwebengine/6.8.0/recipe-sysroot= -fmacro-prefix-map=/home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtwebengine/6.8.0/recipe-sysroot= -fdebug-prefix-map=/home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtwebengine/6.8.0/recipe-sysroot-native= -fmacro-prefix-map=/home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtwebengine/6.8.0/image= -g1 -c ../../../../../git/src/3rdparty/chromium/third_party/distributed_point_functions/code/dpf/internal/evaluate_prg_hwy.cc -o obj/third_party/distributed_point_functions/internal/evaluate_prg_hwy.o agent:2024/06/24 07:32:32 build.go:404: | during GIMPLE pass: pre agent:2024/06/24 07:32:32 build.go:404: | In file included from ../../../../../git/src/3rdparty/chromium/third_party/highway/src/hwy/foreach_target.h:163, agent:2024/06/24 07:32:32 build.go:404: | from ../../../../../git/src/3rdparty/chromium/third_party/distributed_point_functions/code/dpf/internal/evaluate_prg_hwy.cc:37: agent:2024/06/24 07:32:32 build.go:404: | ../../../../../git/src/3rdparty/chromium/third_party/distributed_point_functions/code/dpf/internal/evaluate_prg_hwy.cc: In function 'absl::Status distributed_point_functions::dpf_internal::N_SVE::EvaluateSeedsHwy(int64_t, int, int, const absl::uint128*, const bool*, const absl::uint128*, int, const absl::uint128*, const bool*, const bool*, const distributed_point_functions::Aes128FixedKeyHash&, const distributed_point_functions::Aes128FixedKeyHash&, absl::uint128*, bool*)': agent:2024/06/24 07:32:32 build.go:404: | ../../../../../git/src/3rdparty/chromium/third_party/distributed_point_functions/code/dpf/internal/evaluate_prg_hwy.cc:152:14: internal compiler error: in eliminate_stmt, at tree-ssa-sccvn.cc:6870 agent:2024/06/24 07:32:32 build.go:404: | 152 | absl::Status EvaluateSeedsHwy( agent:2024/06/24 07:32:32 build.go:404: | | ^~~~~~~~~~~~~~~~ agent:2024/06/24 07:32:32 build.go:404: | 0x1a78aac internal_error(char const*, ...) agent:2024/06/24 07:32:32 build.go:404: | ???:0 agent:2024/06/24 07:32:32 build.go:404: | 0x6e97cf fancy_abort(char const*, int, char const*) agent:2024/06/24 07:32:32 build.go:404: | ???:0 agent:2024/06/24 07:32:32 build.go:404: | 0xfdecbd eliminate_dom_walker::before_dom_children(basic_block_def*) agent:2024/06/24 07:32:32 build.go:404: | ???:0 agent:2024/06/24 07:32:32 build.go:404: | 0x18820e7 dom_walker::walk(basic_block_def*) agent:2024/06/24 07:32:32 build.go:404: | ???:0 agent:2024/06/24 07:32:32 build.go:404: | 0xfd3134 eliminate_with_rpo_vn(bitmap_head*) agent:2024/06/24 07:32:32 build.go:404: | ???:0
Full log attached, also in testresults.qt.io
This happened with https://codereview.qt-project.org/c/yocto/meta-qt6/+/569033 (& https://codereview.qt-project.org/c/yocto/meta-qt6/+/570787).
Tried also a test build with yocto-5.0 (scarthgap) & latest 6.8 WE & more recent chromium update available there but same result.