Fix embedded build without x11

Fix compilation issue when doing ozone build without x11,
deals with:

"error: 'HANDLE_EINTR' was not declared in this scope"

Add also missing proxy channel include.

"note: forward declaration of ‘class IPC::ChannelProxy’"

Task-number: QTBUG-126655
Pick-to: 6.8
Change-Id: I3d06e7d4ce7afbfa86bb9535a2016bfc4e5586a5
Reviewed-by: Michael Brüning <michael.bruning@qt.io>